<resources>
    <string name="app_name">ApplicationIMC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tituloImc">
        Calculadora IMC
    </string>
    
    <string name="titiuloInputAltura">
        Altura
    </string>

    <string name="titiuloInputPeso">
        Peso
    </string>

    <string name="titiuloConverter">
        CONVERTER
    </string>

    <string name="titiuloLimpar">
        LIMPAR
    </string>
</resources>